# allegro_blasteroids

./: .ccls  .gitignore  BUILD.md  CMakeLists.txt  README.md  embed_font.py  flake.nix  main.c  org.github.lucasew.Blasteroids.appdata.xml  org.github.lucasew.Blasteroids.desktop  org.github.lucasew.Blasteroids.yml  package.nix  result
.github/workflows/: autorelease.yml
include/blasteroids/: asteroid.h  asteroid_draw.h  asteroid_list.h  asteroid_log.h  asteroid_ops.h  asteroid_struct.h  bullet.h  bullet_draw.h  bullet_generator.h  bullet_list.h  bullet_log.h  bullet_ops.h  bullet_struct.h  collision.h  config.h  context.h  event.h  main.h  pos_fixer.h  spaceship_draw.h  spaceship_log.h  spaceship_ops.h  spaceship_struct.h  text_draw.h  util_draw.h  util_log.h  util_rand.h  util_signal.h  utils.h
include/blasteroids/utils/: log.h  rand.h
src/: asteroid.c  asteroid_draw.c  asteroid_list.c  asteroid_log.c  asteroid_ops.c  bullet.c  bullet_draw.c  bullet_generator.c  bullet_list.c  bullet_log.c  bullet_ops.c  collision.c  context.c  event.c  pos_fixer.c  spaceship.c  spaceship_draw.c  spaceship_log.c  spaceship_ops.c  text.c  text_draw.c  util_draw.c  util_log.c  util_rand.c  util_signal.c
src/utils/: draw.c  rand.c  signal.c
